--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,15 +1,20 @@
 /* needed for interactive map in listplace.xsl */
 div#map {
-    height: 50vh;
+  height: 50vh;
 }
 
 /* Match bootstrap navlink focus outline color. */
 :focus-visible {
-    outline: 0;
-    box-shadow: 0 0 0 .25rem rgba(13,110,253,.25);
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 
 .entity {
-    text-decoration: underline dotted;
-    cursor: pointer;
+  text-decoration: underline dotted;
+  cursor: pointer;
+}
+
+.footerlogo {
+  max-width: 50%;
+  max-height: 150px;
 }
